--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "gatsby-starter-hello-world",
+  "name": "e-commerce-Gatsby",
   "private": true,
-  "description": "A simplified bare-bones starter for Gatsby",
+  "description": "PWA for E-commerce with Gatsby",
   "version": "0.1.0",
   "license": "0BSD",
   "scripts": {
@@ -14,9 +14,16 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.1",
+    "@material-ui/icons": "^4.9.1",
+    "classnames": "^2.2.6",
     "gatsby": "^2.25.3",
+    "gatsby-plugin-manifest": "^2.8.0",
+    "gatsby-plugin-offline": "^3.6.0",
+    "gatsby-plugin-react-helmet": "^3.6.0",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-helmet": "^6.1.0"
   },
   "devDependencies": {
     "prettier": "2.1.2"
